force-app/main/default/objects/Reporting_Period__c/Reporting_Period__c.object-meta.xml
<CustomObject>
    <label>Reporting Period</label>
    <nameField>
        <displayFormat>RP-{000}</displayFormat>
        <label>Reporting Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Periods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>