force-app/main/default/objects/Reporting_Period__c/fields/CER_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>CER_Calc_Date__c</fullName>
    <description>CER Calc Date</description>
    <label>CER Calc Date</label>
    <type>Date</type>
</CustomField>