force-app/main/default/objects/Reporting_Period__c/fields/CER_Calculated__c.field-meta.xml
<CustomField>
    <fullName>CER_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CER Calculated</label>
    <type>Checkbox</type>
</CustomField>