force-app/main/default/objects/Reporting_Period__c/fields/CM_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>CM_Calc_Date__c</fullName>
    <label>CM Calc Date</label>
    <type>Date</type>
</CustomField>