force-app/main/default/objects/Reporting_Period__c/fields/CM_Calculated__c.field-meta.xml
<CustomField>
    <fullName>CM_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Calculated</label>
    <type>Checkbox</type>
</CustomField>