force-app/main/default/objects/Reporting_Period__c/fields/Current_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Current_Reporting_Period__c</fullName>
    <description>Displays true if current reporting period.</description>
    <formula>IF( TODAY( ) &gt;= Start_Date__c &amp;&amp; TODAY( ) &lt;= End_Date__c, True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Reporting Period</label>
    <type>Checkbox</type>
</CustomField>