force-app/main/default/objects/Reporting_Period__c/fields/NationalAverageCreated__c.field-meta.xml
<CustomField>
    <fullName>NationalAverageCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NationalAverageCreated</label>
    <type>Checkbox</type>
</CustomField>