force-app/main/default/objects/Reporting_Period__c/fields/No_CER_Recalculations_After__c.field-meta.xml
<CustomField>
    <fullName>No_CER_Recalculations_After__c</fullName>
    <inlineHelpText>No CER Recalculations will be executed after this date</inlineHelpText>
    <label>No CER Recalculations After</label>
    <type>Date</type>
</CustomField>