force-app/main/default/objects/Reporting_Period__c/fields/No_CM_Recalculations_After__c.field-meta.xml
<CustomField>
    <fullName>No_CM_Recalculations_After__c</fullName>
    <inlineHelpText>No CM Recalculations will be executed after this date</inlineHelpText>
    <label>No CM Recalculations After</label>
    <type>Date</type>
</CustomField>