force-app/main/default/objects/Reporting_Period__c/fields/No_Overall_Recalculations_After__c.field-meta.xml
<CustomField>
    <fullName>No_Overall_Recalculations_After__c</fullName>
    <inlineHelpText>No Overall Recalculations will be executed after this date</inlineHelpText>
    <label>No Overall Recalculations After</label>
    <type>Date</type>
</CustomField>