force-app/main/default/objects/Reporting_Period__c/fields/No_QI_Recalculations_After__c.field-meta.xml
<CustomField>
    <fullName>No_QI_Recalculations_After__c</fullName>
    <inlineHelpText>No QI Recalculations will be executed after this date</inlineHelpText>
    <label>No QI Recalculations After</label>
    <type>Date</type>
</CustomField>