force-app/main/default/objects/Reporting_Period__c/fields/Previous_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Previous_Reporting_Period__c</fullName>
    <description>Displays true if dates match previous reporting period</description>
    <formula>IF( ISPICKVAL (Reporting_Period_Type__c, &quot;Quarter&quot;), 
IF( ADDMONTHS( TODAY( ), -3 ) &gt;= Start_Date__c &amp;&amp; ADDMONTHS( TODAY( ), -3 ) &lt;= End_Date__c, True, False ),
IF( ADDMONTHS( TODAY( ), -12 ) &gt;= Start_Date__c &amp;&amp; ADDMONTHS( TODAY( ), -12 ) &lt;= End_Date__c, True, False )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Reporting Period</label>
    <type>Checkbox</type>
</CustomField>