force-app/main/default/objects/Reporting_Period__c/fields/QFR_Email_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QFR_Email_Due_Date__c</fullName>
    <formula>TEXT(Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QFR Email Due- Date</label>
    <type>Text</type>
</CustomField>