force-app/main/default/objects/Reporting_Period__c/fields/QFR_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>QFR_Lock_Date__c</fullName>
    <label>QFR Lock Date</label>
    <type>Date</type>
</CustomField>