force-app/main/default/objects/Reporting_Period__c/fields/QFR_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>QFR_Reporting_Period__c</fullName>
    <formula>&apos;Q&apos; &amp; IF( MONTH(Start_Date__c) &gt;= 1 &amp;&amp; MONTH(End_Date__c) &lt;= 3 ,&apos;3&apos;, 
IF( MONTH(Start_Date__c) &gt;= 4 &amp;&amp; MONTH(End_Date__c) &lt;= 6 ,&apos;4&apos;, 
IF( MONTH(Start_Date__c) &gt;= 7 &amp;&amp; MONTH(End_Date__c) &lt;= 9 ,&apos;1&apos;,
IF( MONTH(Start_Date__c) &gt;= 10 &amp;&amp; MONTH(End_Date__c) &lt;= 12 ,&apos;2&apos;,null) ) ) )
+&quot; &quot;+IF(MONTH(Start_Date__c) &lt; 7,TEXT(YEAR(Start_Date__c)-1),TEXT(YEAR(Start_Date__c)))
&amp;&apos;/&apos;&amp; IF(MONTH(End_Date__c) &gt;= 7,RIGHT( TEXT(YEAR(End_Date__c) +1), 2),RIGHT( TEXT(YEAR(End_Date__c)), 2))</formula>
    <label>QFR Reporting Period</label>
    <type>Text</type>
</CustomField>