force-app/main/default/objects/Reporting_Period__c/fields/QI_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>QI_Calc_Date__c</fullName>
    <description>QI Calc Date</description>
    <label>QI Calc Date</label>
    <type>Date</type>
</CustomField>