force-app/main/default/objects/Reporting_Period__c/fields/QI_Calculated__c.field-meta.xml
<CustomField>
    <fullName>QI_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Calculated</label>
    <type>Checkbox</type>
</CustomField>