force-app/main/default/objects/Reporting_Period__c/fields/QI_Submission_Due_Dt__c.field-meta.xml
<CustomField>
    <fullName>QI_Submission_Due_Dt__c</fullName>
    <description>capture the QI submission due date</description>
    <label>QI Submission Due Dt</label>
    <type>Date</type>
</CustomField>