force-app/main/default/objects/Reporting_Period__c/fields/QuintileRangesCalculated__c.field-meta.xml
<CustomField>
    <fullName>QuintileRangesCalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuintileRangesCalculated</label>
    <type>Checkbox</type>
</CustomField>