force-app/main/default/objects/Reporting_Period__c/fields/Reporting_Period_Short__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Short__c</fullName>
    <description>Shortened version or Reporting Period to match Siebel</description>
    <formula>IF( ISPICKVAL(Reporting_Period_Type__c, &apos;Quarter&apos;),
&apos;Quarter &apos; &amp;
IF( MONTH(Start_Date__c) &gt;= 1 &amp;&amp; MONTH(End_Date__c) &lt;= 3 ,&apos;3&apos;,
IF( MONTH(Start_Date__c) &gt;= 4 &amp;&amp; MONTH(End_Date__c) &lt;= 6 ,&apos;4&apos;,
IF( MONTH(Start_Date__c) &gt;= 7 &amp;&amp; MONTH(End_Date__c) &lt;= 9 ,&apos;1&apos;,
IF( MONTH(Start_Date__c) &gt;= 10 &amp;&amp; MONTH(End_Date__c) &lt;= 12 ,&apos;2&apos;,null) ) ) ) &amp;
&apos; FY &apos; &amp;
IF(MONTH(Start_Date__c) &lt; 7,RIGHT( TEXT(YEAR(Start_Date__c) -1), 2),
RIGHT( TEXT(YEAR(Start_Date__c)), 2)) &amp; &apos; - &apos; &amp;
IF(MONTH(End_Date__c) &gt;= 7, RIGHT( TEXT(YEAR(End_Date__c) +1), 2),
RIGHT( TEXT(YEAR(End_Date__c)), 2)),

TEXT(YEAR(Start_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Period Short</label>
    <type>Text</type>
</CustomField>