force-app/main/default/objects/Reporting_Period__c/fields/RP_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>RP_Month_Year__c</fullName>
    <description>This formula field displays Reporting Period’s Start Date’s Month - End Date’s Month and Year.</description>
    <formula>Case(MONTH(Start_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp; &quot; &quot;

&amp; &quot; &quot;

&amp; 
&quot;-&quot;
&amp; &quot; &quot;

&amp;
 Case(MONTH(End_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp; &quot; &quot;
&amp; TEXT(YEAR(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RP Month Year</label>
    <type>Text</type>
</CustomField>