force-app/main/default/objects/Reporting_Period__c/fields/RP_Quarter__c.field-meta.xml
<CustomField>
    <fullName>RP_Quarter__c</fullName>
    <formula>&apos;Q&apos; &amp; IF( MONTH(Start_Date__c) &gt;= 1 &amp;&amp; MONTH(End_Date__c) &lt;= 3 ,&apos;2&apos;, 
IF( MONTH(Start_Date__c) &gt;= 4 &amp;&amp; MONTH(End_Date__c) &lt;= 6 ,&apos;3&apos;, 
IF( MONTH(Start_Date__c) &gt;= 7 &amp;&amp; MONTH(End_Date__c) &lt;= 9 ,&apos;4&apos;,
IF( MONTH(Start_Date__c) &gt;= 10 &amp;&amp; MONTH(End_Date__c) &lt;= 12 ,&apos;1&apos;,null) ) ) )
+&quot; &quot;+&apos;FY&apos;&amp; IF(MONTH(End_Date__c) &gt;= 7,RIGHT( TEXT(YEAR(End_Date__c) +1), 2),RIGHT( TEXT(YEAR(End_Date__c)), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RP Quarter</label>
    <type>Text</type>
</CustomField>