force-app/main/default/objects/Reporting_Period__c/fields/StarRating_Calc_Date__c.field-meta.xml
<CustomField>
    <fullName>StarRating_Calc_Date__c</fullName>
    <label>Star Rating Calc Date</label>
    <type>Date</type>
</CustomField>