force-app/main/default/objects/Reporting_Period__c/fields/STARRatingRecordsCreated__c.field-meta.xml
<CustomField>
    <fullName>STARRatingRecordsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Per quarter to identify STAR Rating history records have been created</description>
    <label>STARRatingRecordsCreated</label>
    <type>Checkbox</type>
</CustomField>