force-app/main/default/objects/Reporting_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of Reporting Period</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>