force-app/main/default/objects/Reporting_Period__c/validationRules/EndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;=  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Reporting Period End Date can not be before or equal Start Date</errorMessage>
</ValidationRule>