force-app/main/default/objects/Reporting_Period__c/validationRules/QFR_Lock_Date_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>QFR_Lock_Date_Must_Be_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    AND ( ISCHANGED(QFR_Lock_Date__c ) , NOT(ISBLANK(PRIORVALUE(QFR_Lock_Date__c)))),
    QFR_Lock_Date__c &lt; Today() 
)</errorConditionFormula>
    <errorDisplayField>QFR_Lock_Date__c</errorDisplayField>
    <errorMessage>The QFR lock date must be greater than or equal to today&apos;s date.</errorMessage>
</ValidationRule>