force-app/main/default/objects/Reporting_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_Reporting_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>